--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -30,73 +30,59 @@
 #define DSK_NEXT     &kp LG(LC(RIGHT))      // next desktop
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(tab,       &kp TAB,           LT4 LT3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(esc,       &kp ESC,           LT3 LT2,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mouse,     &smart_mouse,      LT1 LT3,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tab,       &kp TAB,           LT4 LT3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(esc,       &kp ESC,           LT3 LT2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mouse,     &smart_mouse,      LT1 LT3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(dskprv,    DSK_PREV,          LB4 LB3,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,      &copy_cut,         LB3 LB2,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste,     &kp LS(INS),       LB2 LB1,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dskprv,    DSK_PREV,          LB4 LB3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,      &copy_cut,         LB3 LB2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,     &kp LS(INS),       LB2 LB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - right hand */
-ZMK_COMBO(bspc,      &kp BSPC,          RT4 RT3,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(pgdn,      &kp PG_DN,         RT3 RT2,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(pgup,      &kp PG_UP,         RT2 RT1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(del,       &kp DEL,           RT1 RT0,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(grk,       &sl UC,            RT3 RT1,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cpgrk,     &sls 0,            RT1 RT2 RT3, DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(bspc,      &kp BSPC,          RT4 RT3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgdn,      &kp PG_DN,         RT3 RT2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pgup,      &kp PG_UP,         RT2 RT1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(del,       &kp DEL,           RT1 RT0,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(grk,       &sl UC,            RT3 RT1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cpgrk,     &sls 0,            RT1 RT2 RT3, DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(ret,       HRC_RET,           RM4 RM3,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(wrdr,      HRC_WRDR,          RM3 RM2,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(wrdl,      HRC_WRDL,          RM2 RM1,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ins,       &kp INS,           RM1 RM0,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ret,       HRC_RET,           RM4 RM3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(wrdr,      HRC_WRDR,          RM3 RM2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(wrdl,      HRC_WRDL,          RM2 RM1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ins,       &kp INS,           RM1 RM0,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(dsknext,   DSK_NEXT,          RB4 RB3,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(rbkt,      &kp RBKT,          RB3 RB2,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lbkt,      &kp LBKT,          RB2 RB1,     DEF  NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dsknext,   DSK_NEXT,          RB4 RB3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rbkt,      &kp RBKT,          RB3 RB2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lbkt,      &kp LBKT,          RB2 RB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Vertical combos - left hand */
-ZMK_COMBO(excl,      &kp EXCL,          LT4 LM4,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(at,        &kp AT,            LT3 LM3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(hash,      &kp HASH,          LT2 LM2,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dllr,      &kp DLLR,          LT1 LM1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(prcnt,     &kp PRCNT,         LT0 LM0,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(excl,      &kp EXCL,          LT4 LM4,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(at,        &kp AT,            LT3 LM3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(hash,      &kp HASH,          LT2 LM2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dllr,      &kp DLLR,          LT1 LM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(prcnt,     &kp PRCNT,         LT0 LM0,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-ZMK_COMBO(grave,     &kp GRAVE,         LM4 LB4,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(equal,     &kp EQUAL,         LM3 LB3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(bslh,      &kp BSLH,          LM2 LB2,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(pipe,      &kp PIPE,          LM1 LB1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(minus,     &kp MINUS,         LM0 LB0,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(grave,     &kp GRAVE,         LM4 LB4,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(equal,     &kp EQUAL,         LM3 LB3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,      &kp BSLH,          LM2 LB2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,      &kp PIPE,          LM1 LB1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(minus,     &kp MINUS,         LM0 LB0,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Vertical combos - right hand */
-ZMK_COMBO(caret,     &kp CARET,         RT0 RM0,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(amps,      &kp AMPS,          RT1 RM1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(star,      &kp STAR,          RT2 RM2,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(swp1,      &prog_swap,        RT3 RM3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(swp2,      &lang_swap,        RT4 RM4,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caret,     &kp CARET,         RT0 RM0,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,      &kp AMPS,          RT1 RM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(star,      &kp STAR,          RT2 RM2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(swp1,      &prog_swap,        RT3 RM3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(swp2,      &lang_swap,        RT4 RM4,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-ZMK_COMBO(under,     &kp UNDER,         RM0 RB0,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lpar,      &lpar_lt,          RM1 RB1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(fslh,      &kp FSLH,          RM2 RB2,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rpar,      &rpar_gt,          RM3 RB3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(under,     &kp UNDER,         RM0 RB0,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lpar,      &lpar_lt,          RM1 RB1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,      &kp FSLH,          RM2 RB2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpar,      &rpar_gt,          RM3 RB3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Diagonal combos - right hand */
-ZMK_COMBO(home,      &kp HOME,          RT2 RM1,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(end,       &kp END,           RT2 RM3,     DEF  NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(home,      &kp HOME,          RT2 RM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(end,       &kp END,           RT2 RM3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal combos - cross hand */
-ZMK_COMBO(caps,      &kp CAPS,          LM1 RM1,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-
-/* Function combos - left hand */
-ZMK_COMBO(CF01,      &kp F1,            LH1 LB4,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF02,      &kp F2,            LH1 LB3,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF03,      &kp F3,            LH1 LB2,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF04,      &kp F4,            LH1 LM4,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF05,      &kp F5,            LH1 LM3,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF06,      &kp F6,            LH1 LM2,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF07,      &kp F7,            LH1 LT4,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF08,      &kp F8,            LH1 LT3,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF09,      &kp F9,            LH1 LT2,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF10,      &kp F10,           LH1 LB1,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF11,      &kp F11,           LH1 LM1,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(CF12,      &kp F12,           LH1 LT1,     DEF     , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(caps,      &kp CAPS,          LM1 RM1,     DEF       , COMBO_TERM_FAST, COMBO_IDLE_FAST)
