--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -1,33 +1,19 @@
-# These are required by ARTSEYIO
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=16
-CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=8
-CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
-
-# Increases the power of the radio
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Set sleep timeout to 60min (60*60*1000ms)
+# Set sleep timeout to 30min (30*60*1000ms)
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Bluetooth tweaks
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable mouse
+CONFIG_ZMK_POINTING=y
+# CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 
 # Zen display tweaks, requires patches by caksoylar
 CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300
 CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
 CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
 CONFIG_IL0323_INVERT=y
-
-# Mouse config, requires PR #778
-CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_MOUSE_TICK_DURATION=8
-
-CONFIG_ZMK_PLOVER_HID=y
-
-# Windows battery reporting fix
-# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
-
-# Clear all bluetooth bonds on start up
-# CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
-
-# Turn on logging
-# CONFIG_ZMK_USB_LOGGING=y
-# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
