--- a/config/west.yml
+++ b/config/west.yml
@@ -17,5 +17,6 @@ manifest:
     - name: zmk-caksoylar
       remote: caksoylar
       revision: caksoylar/zen-v1+v2
+      import: app/west.yml
   self:
     path: config
