--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -14,6 +14,6 @@ CONFIG_ZMK_POINTING=y
 
 # Zen display tweaks, requires patches by caksoylar
 CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300
-CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
-# CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
-# CONFIG_IL0323_INVERT=y
+# CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
+CONFIG_IL0323_INVERT=y
