--- a/config/west.yml
+++ b/config/west.yml
@@ -4,12 +4,17 @@ manifest:
       url-base: https://github.com/caksoylar
     - name: urob
       url-base: https://github.com/urob
+    - name: autolayer
+      url-base: https://github.com/urob
   projects:
     - name: zmk
       remote: caksoylar
       revision: caksoylar/zen-v1+v2  # custom branch name
       import: app/west.yml
     - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-auto-layer
       remote: urob
       revision: main
   self:
