--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -21,11 +21,11 @@
 
 &mmv_input_listener {
   warp {
-    layers = <NAV>;
+    layers = <DEF>;
     input-processors = <&zip_xy_scaler 3 1>;
   };
   precision {
-    layers = <FN>;
+    layers = <DEF>;
     input-processors = <&zip_xy_scaler 1 2>;
   };
 };
