--- a/config/west.yml
+++ b/config/west.yml
@@ -1,13 +1,17 @@
 manifest:
   remotes:
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
     - name: caksoylar
       url-base: https://github.com/caksoylar
     - name: urob
       url-base: https://github.com/urob
-    - name: autolayer
-      url-base: https://github.com/urob
   projects:
     - name: zmk
+      remote: zmkfirmware
+      revision: main
+      import: app/west.yml
+    - name: zmk-caksoylar
       remote: caksoylar
       revision: caksoylar/zen-v1+v2  # custom branch name
       import: app/west.yml
@@ -16,6 +20,9 @@ manifest:
       revision: main
     - name: zmk-auto-layer
       remote: urob
-      revision: main
+      revision: v0.2 # set to same version as zmk above
+    - name: zmk-leader-key
+      remote: urob
+      revision: v0.2 # set to same as ZMK version above
   self:
     path: config
