--- a/config/west.yml
+++ b/config/west.yml
@@ -12,5 +12,11 @@ manifest:
     - name: zmk-helpers
       remote: urob
       revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: v0.2
+    - name: zmk-leader-key
+      remote: urob
+      revision: v0.2
   self:
     path: config
