--- a/config/west.yml
+++ b/config/west.yml
@@ -1,13 +1,19 @@
 manifest:
   remotes:
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
     - name: caksoylar
       url-base: https://github.com/caksoylar
     - name: urob
       url-base: https://github.com/urob
   projects:
-    - name: zmk
+    - name: zen-display-improvements
       remote: caksoylar
       revision: caksoylar/zen-v1+v2  # custom branch name
+      import: app/west.yml
+    - name: zmk
+      remote: urob
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-helpers
       remote: urob
