--- a/config/west.yml
+++ b/config/west.yml
@@ -2,15 +2,9 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: caksoylar
-      url-base: https://github.com/caksoylar
     - name: urob
       url-base: https://github.com/urob
   projects:
-    - name: zen-display-improvements
-      remote: caksoylar
-      revision: caksoylar/zen-v1+v2  # custom branch name
-      import: app/west.yml
     - name: zmk
       remote: urob
       revision: v0.2+fix-child-nodes
@@ -20,9 +14,12 @@ manifest:
       revision: main
     - name: zmk-auto-layer
       remote: urob
-      revision: v0.2
+      revision: v0.2 # set to same version as zmk above
     - name: zmk-leader-key
       remote: urob
-      revision: v0.2
+      revision: v0.2 # set to same as ZMK version above
+    - name: zmk-adaptive-key
+      remote: urob
+      revision: v0.2 # set to same as ZMK version above
   self:
     path: config
