--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -20,7 +20,7 @@
 /* Horizontal combos - left hand */
 ZMK_COMBO(tab,    &kp TAB,        LT4 LT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(esc,    &kp ESC,        LT3 LT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mouse,  &smart_mouse,   LT3 LT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+// ZMK_COMBO(mouse,  &smart_mouse,   LT3 LT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 ZMK_COMBO(shift,  &kp LSHFT,      LM4 LM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LG(LALT), KEYS_R)
 
@@ -60,13 +60,13 @@ ZMK_COMBO(minus,  &kp MINUS,     LM0 LB0,          QWERTY NUMNAV, COMBO_TERM_SLO
 ZMK_COMBO(caret,  &kp CARET,     RT0 RM0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(amps,   &kp AMPS,      RT1 RM1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(star,   &kp STAR,      RT2 RM2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(swp1,   &swapper1,     RT3 RM3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(swp2,   &swapper2,     RT4 RM4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(swp1,   &swapper1,     RT3 RM3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(swp2,   &swapper2,     RT4 RM4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 ZMK_COMBO(under,  &kp UNDER,     RM0 RB0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lpar,   &lpar_lt,      RM1 RB1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(lpar,   &lpar_lt,      RM1 RB1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,   &kp FSLH,      RM2 RB2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rpar,   &rpar_gt,      RM3 RB3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(rpar,   &rpar_gt,      RM3 RB3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Diagonal combos - right hand */
 ZMK_COMBO(home,  &kp HOME,      RT2 RM1,           QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
