--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -21,11 +21,11 @@
 
 &mmv_input_listener {
   warp {
-    layers = <DEF>;
+    layers = <QWERTY>;
     input-processors = <&zip_xy_scaler 3 1>;
   };
   precision {
-    layers = <DEF>;
+    layers = <QWERTY>;
     input-processors = <&zip_xy_scaler 1 2>;
   };
 };
@@ -42,17 +42,17 @@
 
 &msc_input_listener {
   warp {
-    layers = <DEF>;
+    layers = <QWERTY>;
     input-processors = <&zip_scroll_scaler 2 1>;
   };
   precision {
-    layers = <DEF>;
+    layers = <QWERTY>;
     input-processors = <&zip_scroll_scaler 1 2>;
   };
 };
 
-#define U_MS_U &mmv MOVE_UP
-#define U_MS_D &mmv MOVE_DOWN
+#QWERTYine U_MS_U &mmv MOVE_UP
+#QWERTYine U_MS_D &mmv MOVE_DOWN
 #define U_MS_L &mmv MOVE_LEFT
 #define U_MS_R &mmv MOVE_RIGHT
 #define U_WH_U &msc SCRL_UP
