--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -51,8 +51,8 @@
   };
 };
 
-#QWERTYine U_MS_U &mmv MOVE_UP
-#QWERTYine U_MS_D &mmv MOVE_DOWN
+#define U_MS_U &mmv MOVE_UP
+#define U_MS_D &mmv MOVE_DOWN
 #define U_MS_L &mmv MOVE_LEFT
 #define U_MS_R &mmv MOVE_RIGHT
 #define U_WH_U &msc SCRL_UP
