--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -19,3 +19,59 @@
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(tab,    &kp TAB,        LT4 LT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+error: unterminated argument list invoking macro "ZMK_COMBO"
+   76 | ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,           QWERTY,         COMBO_TERM_FAST, COMBO_IDLE_FAST)ZMK_COMBO(esc,    &kp ESC,        LT3 LT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+// ZMK_COMBO(mouse,  &smart_mouse,   LT3 LT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(shift,  &kp LSHFT,      LM4 LM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LG(LALT), KEYS_R)
+
+ZMK_COMBO(undo,   &kp LC(Z),      LB4 LB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cut,    &kp LC(X),      LB3 LB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,   &kp LC(C),      LB2 LB1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,  &kp LC(V),      LB1 LB0,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Horizontal combos - right hand */
+ZMK_COMBO(bspc,   &kp BSPC,       RT3 RT4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(del,    &kp DEL,        RT0 RT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(ent,    &kp RET,        RM3 RM4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RG(LALT), KEYS_L)
+ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RA(LCTRL), KEYS_L)
+ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LSHFT), KEYS_L)
+ZMK_COMBO(ins,    &kp INS,        RM0 RM1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST）
+
+ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rbrc,   &kp RBKT,       RB2 RB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Vertical combos - left hand */
+ZMK_COMBO(excl,   &kp EXCL,      LT4 LM4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(at,     &kp AT,        LT3 LM3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(hash,   &kp HASH,      LT2 LM2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dllr,   &kp DLLR,      LT1 LM1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(prcnt,  &kp PRCNT,     LT0 LM0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(grave,  &kp GRAVE,     LM4 LB4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(equal,  &kp EQUAL,     LM3 LB3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,   &kp BSLH,      LM2 LB2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,   &kp PIPE,      LM1 LB1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(minus,  &kp MINUS,     LM0 LB0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+/* Vertical combos - right hand */
+ZMK_COMBO(caret,  &kp CARET,     RT0 RM0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,   &kp AMPS,      RT1 RM1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(star,   &kp STAR,      RT2 RM2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(swp1,   &swapper1,     RT3 RM3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(swp2,   &swapper2,     RT4 RM4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(under,  &kp UNDER,     RM0 RB0,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(lpar,   &lpar_lt,      RM1 RB1,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,   &kp FSLH,      RM2 RB2,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(rpar,   &rpar_gt,      RM3 RB3,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+/* Diagonal combos - right hand */
+ZMK_COMBO(home,  &kp HOME,      RT2 RM1,           QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(end,   &kp END,       RT2 RM3,           QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+/* Horizontal combos - cross hand */
+// ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,           QWERTY,         COMBO_TERM_FAST, COMBO_IDLE_FAST)
