--- a/config/west.yml
+++ b/config/west.yml
@@ -4,8 +4,6 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: urob
       url-base: https://github.com/urob
-    - name: dhruvinsh
-      url-base: https://github.com/dhruvinsh
   projects:
     - name: zmk
       remote: urob
@@ -24,7 +22,7 @@ manifest:
       remote: urob
       revision: v0.2 # set to same as ZMK version above
     - name: zmk-tri-state
-      remote: dhruvinsh
-      revision: main
+      remote: urob
+      revision: v0.2
   self:
     path: config
