--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: v0.2+fix-child-nodes
+      revision: v0.2
       import: app/west.yml
     - name: zmk-helpers
       remote: urob
@@ -23,5 +23,6 @@ manifest:
       revision: v0.2 # set to same as ZMK version above
     - name: zmk-tri-state
       remote: urob
+      revision: v0.2
   self:
     path: config
