--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -19,3 +19,25 @@
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(tab,    &kp TAB,        LT4 LT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(esc,    &kp ESC,        LT3 LT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+// ZMK_COMBO(mouse,  &smart_mouse,   LT3 LT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(shift,  &kp LSHFT,      LM4 LM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LG(LALT), KEYS_R)
+
+ZMK_COMBO(undo,   &kp LC(Z),      LB4 LB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cut,    &kp LC(X),      LB3 LB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,   &kp LC(C),      LB2 LB1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,  &kp LC(V),      LB1 LB0,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Horizontal combos - right hand */
+ZMK_COMBO(bspc,   &kp BSPC,       RT3 RT4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(del,    &kp DEL,        RT0 RT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(ent,    &kp RET,        RM3 RM4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RG(LALT), KEYS_L)
+ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RA(LCTRL), KEYS_L)
+ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LSHFT), KEYS_L)
+ZMK_COMBO(ins,    &kp INS,        RM0 RM1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rbrc,   &kp RBKT,       RB2 RB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
