--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -35,9 +35,9 @@ ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,         QWERTY NUMNAV, COMBO_TERM_FAS
 ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(del,    &kp DEL,        RT0 RT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-// ZMK_COMBO(ent,    &kp RET,        RM3 RM4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RG(LALT), KEYS_L)
-// ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RA(LCTRL), KEYS_L)
-// ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LSHFT), KEYS_L)
+ZMK_COMBO(ent,    &kp RET,        RM3 RM4,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ins,    &kp INS,        RM0 RM1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
