--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -22,9 +22,9 @@ ZMK_COMBO(tab,    &kp TAB,        LT4 LT3,         QWERTY NUMNAV, COMBO_TERM_FAS
 ZMK_COMBO(esc,    &kp ESC,        LT3 LT2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mouse,  &smart_mouse,   LT3 LT1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(shift,  &kp LSHFT,      LM4 LM3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ldr,    &leader,        LM2 LM1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LCTRL),    KEYS_R)
+ZMK_COMBO(ldr,    &leader,        LM3 LM2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LCTRL),    KEYS_R)
 ZMK_COMBO(ldrsh,  &leader_sft,    LM3 LM2 LM1,     QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LC(LALT)), KEYS_R)
-ZMK_COMBO(undo,   &kp LC(Z),      LB4 LB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dskl,   &kp LG(LC(LEFT)),      LB4 LB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(cut,    &kp LC(X),      LB3 LB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(copy,   &kp LC(C),      LB2 LB1,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(paste,  &kp LC(V),      LB1 LB0,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
@@ -42,6 +42,7 @@ ZMK_COMBO(ins,    &kp INS,        RM0 RM1,         QWERTY NUMNAV, COMBO_TERM_FAS
 
 ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbrc,   &kp RBKT,       RB2 RB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dskr,   &kp LG(LC(RIGHT)),      RB4 RB3,         QWERTY NUMNAV, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Vertical combos - left hand */
 ZMK_COMBO(excl,   &kp EXCL,      LT4 LM4,          QWERTY NUMNAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
