--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -21,11 +21,11 @@
 
 &mmv_input_listener {
   warp {
-    layers = <QWERTY>;
+    layers = <DEF>;
     input-processors = <&zip_xy_scaler 3 1>;
   };
   precision {
-    layers = <QWERTY>;
+    layers = <DEF>;
     input-processors = <&zip_xy_scaler 1 2>;
   };
 };
@@ -42,11 +42,11 @@
 
 &msc_input_listener {
   warp {
-    layers = <QWERTY>;
+    layers = <DEF>;
     input-processors = <&zip_scroll_scaler 2 1>;
   };
   precision {
-    layers = <QWERTY>;
+    layers = <DEF>;
     input-processors = <&zip_scroll_scaler 1 2>;
   };
 };
