--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -3,10 +3,11 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Bluetooth tweaks
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Don't show layer status
+#CONFIG_CUSTOM_WIDGET_BATTERY_STATUS=n
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
 
 # Enable mouse
 CONFIG_ZMK_POINTING=y
