--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: main
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-helpers
       remote: urob
