--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -73,5 +73,5 @@ ZMK_COMBO(home,   &kp HOME,          RT2 RM1,          DEF NN, COMBO_TERM_SLOW, 
 ZMK_COMBO(end,    &kp END,           RT2 RM3,          DEF NN, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal combos - cross hand */
-ZMK_COMBO(caps,   &kp CAPS,          LM1 RM1,          DEF,         COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(caps,   &kp CAPS,          LM1 RM1,          DEF,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
