--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -10,3 +10,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Enable mouse
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+
+# Fix for combos not being registered into firmware
+config ZMK_COMBO_MAX_COMBOS_PER_KEY=50
