--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -12,4 +12,4 @@ CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 
 # Fix for combos not being registered into firmware
-config ZMK_COMBO_MAX_COMBOS_PER_KEY=50
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=50
