--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -1,3 +1,4 @@
+
 /*                KEY POSITIONS
 
   ╭─────────────────────╮ ╭─────────────────────╮
@@ -24,7 +25,7 @@ ZMK_COMBO(caps,   &kp CAPS,          LM1 RM1,          DEF,    COMBO_TERM_SLOW, 
 ZMK_COMBO(tab,    &kp TAB,           LT4 LT3,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(esc,    &kp ESC,           LT3 LT2,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mouse,  &smart_mouse,      LT3 LT1,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(shift,  &Scaps,            LM4 LM3,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(shift,  &kp LSHFT,         LM4 LM3,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ldr,    &leader,           LM3 LM2,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LCTRL),    KEYS_R)
 ZMK_COMBO(ldrsh,  &leader_sft,       LM3 LM2 LM1,     DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LC(LALT)), KEYS_R)
 ZMK_COMBO(dskl,   &kp LG(LC(LEFT)),  LB4 LB3,         DEF NN, COMBO_TERM_FAST, COMBO_IDLE_FAST)
